src/test/ui/async-await/issue-67204-async-explain-2015.rs
// edition:2015

fn main() {}
fn bar() -> Result<(), ()> {
    panic!()
}

fn foo() -> Result<(), ()> {
   let x = async {
       bar()?;
   };
   Ok(())
}
